Added C-Graph and EUHackathon at Brussels

--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@
           </div>
         </div>
 
-
         <div class="row" >
+          <div class="col-xs-3">November 2016</div>
+          <div class="col-xs-9">EUHackathon '16 (Visualizing copyright evidence) participator at Brussels.</div>
+        </div>
+        <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">November 2016</div>
           <div class="col-xs-9">ImaginChallenge Games Edition '16 participator at Barcelona.</div>
         </div>
