--- a/projects.html
+++ b/projects.html
@@ -75,8 +75,20 @@
         <!-- Projects Row -->
         <div class="row">
           <div class="col-md-4 portfolio-item">
+              <a href="https://github.com/ismaro3/c-graph" target="_blank">
+                  <img class="img-responsive" src="images/cgraph.png" alt="C-graph">
+              </a>
+              <h3>
+                <a href="https://github.com/ismaro3/c-graph" target="_blank">©-graph</a>
+              </h3>
+              <p>Tool to visualize relationships between groups of copyright-related papers. Multiple grouping criterias can be applied. Good-looking and easy to use. </p>
+
+              <p><b>Platform: </b> Web</p>
+              <p><b>Technologies</b>: Javascript + Java + Semantic Web</p>
+          </div>
+          <div class="col-md-4 portfolio-item">
               <a href="https://github.com/albertomg994/Stock-Surfer" target="_blank">
-                  <img class="img-responsive" src="images/stocksurfer.png" alt="Stores for me!">
+                  <img class="img-responsive" src="images/stocksurfer.png" alt="Stock Surfer">
               </a>
               <h3>
                 <a href="https://github.com/albertomg994/Stock-Surfer" target="_blank">Stock Surfer</a>
@@ -99,6 +111,15 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: AngularJS + NodeJS</p>
           </div>
+
+
+
+
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/borjaeg/keystone" target="_blank">
                   <img class="img-responsive" src="images/keystone.png" alt="Linked Data Hurricanes Info">
@@ -111,14 +132,6 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: Java Spark + Javascript</p>
           </div>
-
-
-
-        </div>
-        <!-- /.row -->
-
-        <!-- Projects Row -->
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="http://sid.cps.unizar.es/Infoboxer" target="_blank">
                   <img class="img-responsive" src="images/infoboxer.png" alt="Infoboxer">
@@ -131,7 +144,7 @@
               <p><b>Final Degree Project</b></p>
               <p>System that helps users to create rich and accurate content for Knowledge Bases and Wikipedia Infoboxes, using statistical and semantic knowledge from linked data sources and the Semantic Web.</p>
               <p><b>Platform: </b> Web</p>
-              <p><b>Technologies</b>: Spring Framework (Java) + AngularJS</p>
+              <p><b>Technologies</b>: Spring Framework (Java) + AngularJS + Semantic Web</p>
           </div>
 
           <div class="col-md-4 portfolio-item">
@@ -145,17 +158,7 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: NodeJS with Express + AngularJS</p>
           </div>
-          <div class="col-md-4 portfolio-item">
-              <a href="https://ismaro3.github.io/zgztram" target="_blank">
-                  <img class="img-responsive" src="images/zgztram.png" alt="">
-              </a>
-              <h3>
-                  <a href="https://ismaro3.github.io/zgztram" target="_blank">ZGZ-Tram</a>
-              </h3>
-              <p>A simple web application that shows Zaragoza's Tramway times on a map, using Zaragoza OpenData.</p>
-              <p><b>Platform: </b> Web</p>
-              <p><b>Technologies</b>: AngularJS</p>
-          </div>
+
 
 
 
@@ -167,6 +170,17 @@
 
         <!-- Projects Row -->
         <div class="row">
+          <div class="col-md-4 portfolio-item">
+              <a href="https://ismaro3.github.io/zgztram" target="_blank">
+                  <img class="img-responsive" src="images/zgztram.png" alt="">
+              </a>
+              <h3>
+                  <a href="https://ismaro3.github.io/zgztram" target="_blank">ZGZ-Tram</a>
+              </h3>
+              <p>A simple web application that shows Zaragoza's Tramway times on a map, using Zaragoza OpenData.</p>
+              <p><b>Platform: </b> Web</p>
+              <p><b>Technologies</b>: AngularJS</p>
+          </div>
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/ismaro3/Java-chip8-emulator" target="_blank">
                   <img class="img-responsive" src="images/chip8.png" alt="">
@@ -190,6 +204,14 @@
               <p><b>Platform: </b> Android / Raspberry Pi</p>
               <p><b>Technologies</b>: Java, AngularJS + Ionic, Python</p>
           </div>
+
+
+
+
+
+
+        </div>
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/ismaro3/Twitter-Contest-Bot" target="_blank">
                   <img class="img-responsive" src="images/twitterbot.png" alt="">
@@ -201,13 +223,6 @@
               <p><b>Platform: </b> Windows/Linux/MacOS</p>
               <p><b>Technologies</b>: Java</p>
           </div>
-
-
-
-
-
-        </div>
-        <div class="row">
         <div class="col-md-4 portfolio-item">
             <a href="https://github.com/ismaro3/sanLorenzo-ionic" target="_blank">
                 <img class="img-responsive" src="images/sanlorenzo.png" alt="">
@@ -232,6 +247,11 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: Spring Framework (Java) + ExpressJS</p>
           </div>
+
+            </div>
+
+
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://2015.spaceappschallenge.org/project/cropper/" target="_blank">
                   <img class="img-responsive" src="images/cropper.png" alt="">
@@ -245,10 +265,6 @@
                <p><b>Platform: </b> Web</p>
                <p><b>Technologies</b>: NodeJS + AngularJS</p>
           </div>
-            </div>
-
-
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/WallaTeam/Wallapet" target="_blank">
                   <img class="img-responsive" src="images/wallapet.png" alt="">
@@ -272,20 +288,20 @@
                <p><b>Platform: </b> Nintendo DS</p>
                <p><b>Technologies</b>: C + devkitPro + PAlib</p>
           </div>
-          <div class="col-md-4 portfolio-item">
-              <a href="https://github.com/ismaro3/lifesgame" target="_blank">
-                  <img class="img-responsive" src="images/cells.png" alt="">
-              </a>
-              <h3>
-                  <a href="https://github.com/ismaro3/lifesgame" target="_blank">Conway's game of life</a>
-              </h3>
-              <p>Simple Java implementation of Conway's game of life.</p>
-              <p><b>Platform: </b> Windows/Linux/MacOS</p>
-              <p><b>Technologies</b>: Java</p>
-          </div>
+
         </div>
           <div class="row">
-
+            <div class="col-md-4 portfolio-item">
+                <a href="https://github.com/ismaro3/lifesgame" target="_blank">
+                    <img class="img-responsive" src="images/cells.png" alt="">
+                </a>
+                <h3>
+                    <a href="https://github.com/ismaro3/lifesgame" target="_blank">Conway's game of life</a>
+                </h3>
+                <p>Simple Java implementation of Conway's game of life.</p>
+                <p><b>Platform: </b> Windows/Linux/MacOS</p>
+                <p><b>Technologies</b>: Java</p>
+            </div>
           <div class="col-md-4 portfolio-item">
               <a href="https://play.google.com/store/apps/details?id=com.ismaro3.conversor" target="_blank">
                   <img class="img-responsive" src="images/conversor.png" alt="">
