--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
         </div>
 
         <div class="row" >
+          <div class="col-xs-3">June 2017 - Today</div>
+          <div class="col-xs-9">Google Summer of Code participant with DBpedia (<a href="https://summerofcode.withgoogle.com/dashboard/project/6205485112885248/overview/">Project Link</a>).</div>
+        </div>
+        <div class="row" style="margin-top:20px;">
+          <div class="col-xs-3">March 2017</div>
+          <div class="col-xs-9">SIXHackathon '17 participator at Zurich.</div>
+        </div>
+        <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">November 2016</div>
           <div class="col-xs-9">EUHackathon '16 (Visualizing copyright evidence) participator at Brussels.</div>
         </div>
@@ -177,7 +185,20 @@
 
 
 
+
       <div class="row" >
+      <div class="col-xs-3">29 June 2017</div>
+      <div class="col-xs-9">Extraordinary Degree Prize, best academic record on Computer Engineering in Universidad de Zaragoza, 2012-2016 promotion.
+      </div>
+      </div>
+
+       <div class="row" style="margin-top:20px;">
+      <div class="col-xs-3">12 March 2017</div>
+      <div class="col-xs-9">Finalists in SIX Hackathon thanks to the "Shop And Go" project with Alexandra Yamaui and Cesc Mateu.
+      </div>
+      </div>
+
+      <div class="row" style="margin-top:20px;">
         <div class="col-xs-3">27 October 2016</div>
         <div class="col-xs-9">Winner of Best Final Degree Project Prize on Computer Engineering at Zaragoza 2016 by Tecnara, with my project Infoboxer.
         </div>
@@ -362,7 +383,7 @@ Cropper. <a href="http://2015.spaceappschallenge.org/award/#globalnom" target="_
 <footer>
   <div class="row">
     <div class="col-lg-12">
-      <p>Copyright &copy; Ismael Rodríguez 2016</p>
+      <p>Copyright &copy; Ismael Rodríguez 2017</p>
     </div>
   </div>
   <!-- /.row -->
