--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <li>
                 <a href="projects.html"><i class="glyphicon glyphicon-briefcase"></i>&nbsp;Projects</a>
             </li>
+             <li>
+                <a href="/blog"><i class="glyphicon glyphicon-book"></i>&nbsp;Blog</a>
+            </li>
 
         </ul>
       </div>
