--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,9 @@
                     <li  class="active">
                         <a href="projects.html"><i class="glyphicon glyphicon-briefcase"></i>&nbsp;Projects</a>
                     </li>
+                    <li>
+                <a href="/blog"><i class="glyphicon glyphicon-book"></i>&nbsp;Blog</a>
+            </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
