Changed blog domains

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="projects.html"><i class="glyphicon glyphicon-briefcase"></i>&nbsp;Projects</a>
             </li>
              <li>
-                <a href="/blog"><i class="glyphicon glyphicon-book"></i>&nbsp;Blog</a>
+                <a href="http://blog.ismaelrh.com"><i class="glyphicon glyphicon-book"></i>&nbsp;Blog</a>
             </li>
 
         </ul>
