--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <img style="display: block; margin: auto;"src="http://www.gravatar.com/avatar/4de8d654bf7cffcbd7bbc18fd3bc1e34?s=150" height="150" class="img-circle" alt="ismaelrh">
     <div class="row text-center"><h1>Ismael Rodríguez Hernández</h1></div>
-      <div class="row text-center"><h3>Computer Scientist &amp; Engineer</h3></div>
+      <div class="row text-center"><h3>Software Engineer</h3></div>
     <div class="row">
       <div class="col-lg-12">
         <h1 class="page-header">
@@ -133,7 +133,7 @@
         </div>
 
         <div class="row" >
-          <div class="col-xs-3">June 2017 - Today</div>
+          <div class="col-xs-3">June - September 2017</div>
           <div class="col-xs-9">Google Summer of Code participant with DBpedia (<a href="https://summerofcode.withgoogle.com/dashboard/project/6205485112885248/overview/">Project Link</a>).</div>
         </div>
         <div class="row" style="margin-top:20px;">
@@ -299,7 +299,7 @@ Cropper. <a href="http://2015.spaceappschallenge.org/award/#globalnom" target="_
 
                   </tr>
                   <tr>
-                    <td><strong>English (B2.2)</strong></td><td>Good</td><td>Quite good</td><td>Very good</td><td>Very good</td>
+                    <td><strong>English (C2)</strong></td><td>Good</td><td>Very good</td><td>Very good</td><td>Very good</td>
 
                   </tr>
                   <tr>
@@ -319,9 +319,9 @@ Cropper. <a href="http://2015.spaceappschallenge.org/award/#globalnom" target="_
                 </div>
 
                 <div class="row" style="margin-top:20px;">
-                  <div class="col-xs-3">May 2013</div>
+                  <div class="col-xs-3">August 2017</div>
                   <div class="col-xs-9">
-                    First Certificate In English - University of Cambridge
+                    Certificate in Advanced English: Grade A, ability at C2 level. University of Cambridge.
                   </div>
                   </div>
 
