--- a/projects.html
+++ b/projects.html
@@ -78,12 +78,12 @@
         <!-- Projects Row -->
         <div class="row">
         <div class="col-md-4 portfolio-item">
-              <a href="https://github.com/dbpedia/mappings-ui" target="_blank">
+              <a href="http://blog.ismaelrh.com/GSOC-2017/" target="_blank">
                   <img class="img-responsive" src="images/gsoc17.png" alt="DBpedia Mappings Front-End Administration
 ">
               </a>
               <h3>
-                <a href="https://github.com/dbpedia/mappings-ui" target="_blank">DBpedia Mappings Front-End Administration
+                <a href="http://blog.ismaelrh.com/GSOC-2017/" target="_blank">DBpedia Mappings Front-End Administration
 </a>
               </h3>
               <p>Project developed for DBpedia inside the Google Summer of Code program. Development of a frontend
