--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div class="row" >
           <div class="col-xs-3">June - September 2017</div>
-          <div class="col-xs-9">Google Summer of Code participant with DBpedia (<a href="https://summerofcode.withgoogle.com/dashboard/project/6205485112885248/overview/">Project Link</a>).</div>
+          <div class="col-xs-9">Google Summer of Code participant with DBpedia (<a href="http://blog.ismaelrh.com/GSOC-2017/">Project Blog Link</a>).</div>
         </div>
         <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">March 2017</div>
