--- a/index.html
+++ b/index.html
@@ -1,415 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Ismael Rodríguez</title>
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom CSS -->
-  <link href="css/3-col-portfolio.css" rel="stylesheet">
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
-</head>
-
-<body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">Ismael Rodríguez</a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li  class="active">
-              <a href="index.html"><i class="glyphicon glyphicon-user"></i>&nbsp;About me</a>
-          </li>
-            <li>
-                <a href="projects.html"><i class="glyphicon glyphicon-briefcase"></i>&nbsp;Projects</a>
-            </li>
-             <li>
-                <a href="http://blog.ismaelrh.com"><i class="glyphicon glyphicon-book"></i>&nbsp;Blog</a>
-            </li>
-
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-  </nav>
-
-  <!-- Page Content -->
-  <div class="container">
-
-    <!-- Page Header -->
-
-    <img style="display: block; margin: auto;"src="http://www.gravatar.com/avatar/4de8d654bf7cffcbd7bbc18fd3bc1e34?s=150" height="150" class="img-circle" alt="ismaelrh">
-    <div class="row text-center"><h1>Ismael Rodríguez Hernández</h1></div>
-      <div class="row text-center"><h3>Software Engineer</h3></div>
-    <div class="row">
-      <div class="col-lg-12">
-        <h1 class="page-header">
-          <small>Personal Info</small>
-        </h1>
-      </div>
-    </div>
-
-    <div class="row">
-      <ul>
-
-        <li><strong>Name:</strong> Ismael Rodríguez Hernández</li>
-        <li><strong>Born:</strong> July 18th 1994, Girona, Spain</li>
-        <li><strong>Current place:</strong> Barcelona, Spain</li>
-        <li><strong>eMail:</strong> ismaro.394 <em>at</em> gmail <em>dot</em> com</li>
-        <li><strong>Github:</strong> <a href="http://github.com/ismaro3">ismaro3</a></li>
-        <li><strong>LinkedIn:</strong> <a href="http://es.linkedin.com/in/ismaelrh">ismaelrh</a></li>
-      </ul>
-
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <h1 class="page-header">
-          <small>Education</small>
-
-
-        </h1>
-      </div>
-    </div>
-
-
-    <div class="row" style="margin-top:20px;">
-      <div class="col-xs-3">September 2016 - Now</div>
-      <div class="col-xs-9">
-        <strong>Master in Innovation and Research in Informatics (Service Engineering)</strong> student at Universidad Politècnica de Catalunya, Spain.
-      </div>
-      </div>
-      <div class="row" style="margin-top:20px;">
-        <div class="col-xs-3">2012-July 2016</div>
-        <div class="col-xs-9">
-          <strong>Computer Science and Engineering Degree</strong> student at University of Zaragoza, Spain.
-        </div>
-        </div>
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">2010-2012</div>
-          <div class="col-xs-9">
-            <strong>High School diploma (A level) / Secondary School on Technologies.</strong> at IES Pirámide, Huesca, Spain.
-          </div>
-          </div>
-
-
-
-
-        <div class="row">
-          <div class="col-lg-12">
-            <h1 class="page-header">
-              <small>Experience</small>
-
-
-            </h1>
-          </div>
-        </div>
-
-        <div class="row" >
-          <div class="col-xs-3">June - September 2017</div>
-          <div class="col-xs-9">Google Summer of Code participant with DBpedia (<a href="http://blog.ismaelrh.com/GSOC-2017/">Project Blog Link</a>).</div>
-        </div>
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">March 2017</div>
-          <div class="col-xs-9">SIXHackathon '17 participator at Zurich.</div>
-        </div>
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">November 2016</div>
-          <div class="col-xs-9">EUHackathon '16 (Visualizing copyright evidence) participator at Brussels.</div>
-        </div>
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">November 2016</div>
-          <div class="col-xs-9">ImaginChallenge Games Edition '16 participator at Barcelona.</div>
-        </div>
-        <div class="row" style="margin-top:20px;" >
-          <div class="col-xs-3">October 2016</div>
-          <div class="col-xs-9">HackUPC Fall '16 participator at Barcelona.</div>
-        </div>
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">July 2016</div>
-          <div class="col-xs-9">Attendee at "Keyword search in Big Linked Data" summer course and Hackathon, CITIUS, Santiago de Compostela.</div>
-        </div>
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">Nov. 2015 - June 2016</div>
-          <div class="col-xs-9">Collaboration as an undergraduated student with the Distributed Information Systems Research Group (SID) at University of Zaragoza, developing and improving Infoboxer.</div>
-        </div>
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">Nov. 2015</div>
-          <div class="col-xs-9">Finapps Party 2015 participator at Barcelona.</div>
-        </div>
-
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">April 2015</div>
-          <div class="col-xs-9">Space Apps 2015 participator at Zaragoza.</div>
-        </div>
-
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">Summer 2014</div>
-          <div class="col-xs-9">Internship at <a href="http://www.palbin.com">Palbin.com</a> in Web and e-Commerce development.</div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-12">
-            <h1 class="page-header">
-              <small>Awards and Honors</small>
-
-
-            </h1>
-          </div>
-        </div>
-
-
-
-
-
-      <div class="row" >
-      <div class="col-xs-3">29 June 2017</div>
-      <div class="col-xs-9">Extraordinary Degree Prize, best academic record on Computer Engineering in Universidad de Zaragoza, 2012-2016 promotion.
-      </div>
-      </div>
-
-       <div class="row" style="margin-top:20px;">
-      <div class="col-xs-3">12 March 2017</div>
-      <div class="col-xs-9">Finalists in SIX Hackathon thanks to the "Shop And Go" project with Alexandra Yamaui and Cesc Mateu.
-      </div>
-      </div>
-
-      <div class="row" style="margin-top:20px;">
-        <div class="col-xs-3">27 October 2016</div>
-        <div class="col-xs-9">Winner of Best Final Degree Project Prize on Computer Engineering at Zaragoza 2016 by Tecnara, with my project Infoboxer.
-        </div>
-        </div>
-
-        <div class="row" style="margin-top:20px;" >
-          <div class="col-xs-3">9 October 2016</div>
-          <div class="col-xs-9">GFT Prize in HackUPC Fall 2016 Hackaton thanks to the "Stores for me!" project with Raúl Piracés.
-          </div>
-          </div>
-
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">22 July 2016</div>
-          <div class="col-xs-9">First Prize in Keystone Hackaton, "Keyword Search in Big Linked Data", with my team (Borja Espejo, Raúl Piracés and I).
-          </div>
-          </div>
-
-
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">4 July 2016</div>
-          <div class="col-xs-9">My Final Degree Project "Development of a system to populate Knowledge Bases on
-the Web of Data" was presented, obtaining an evaluation of 9.5 out of 10 with honors. <a href="https://deposita.unizar.es/record/28588" target="_blank">Access to full text</a>.
-          </div>
-          </div>
-
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">June 2016</div>
-          <div class="col-xs-9">Demo paper "WikInfoboxer: A Tool to Create Wikipedia Infoboxes Using DBpedia" has been accepted in the XXI Jornadas de Ingeniería
-del Software y Bases de Datos (JISBD) with very good evaluations.
-          </div>
-          </div>
-
-        <div class="row" style="margin-top:20px;">
-          <div class="col-xs-3">April 2016</div>
-          <div class="col-xs-9">Applied for a Wikimedia IEG Grant to transform the research prototype
-            Infoboxer into WikInfoboxer, a tool ready for Wikipedia/Wikimedia
-            editors. <a href="https://meta.wikimedia.org/wiki/Grants:IEG/WikInfoboxer" target="_blank">More information</a>.
-          </div>
-          </div>
-
-          <div class="row" style="margin-top:20px;">
-            <div class="col-xs-3">October 2015</div>
-            <div class="col-xs-9">Collaboration Grant provided by Spanish “Ministerio de Educación, Cultura y
-                          Deporte” (Education, Culture and Sport Ministry) to develop a research project
-                              with the Distributed Information Systems Research Group (SID) at University
-                              of Zaragoza.
-            </div>
-            </div>
-
-            <div class="row" style="margin-top:20px;">
-              <div class="col-xs-3">April 2015</div>
-              <div class="col-xs-9">NASA Space Apps Global Nomination - Winners in Zaragoza (Spain) with
-Cropper. <a href="http://2015.spaceappschallenge.org/award/#globalnom" target="_blank">More information</a>.
-              </div>
-              </div>
-
-              <div class="row" style="margin-top:20px;">
-                <div class="col-xs-3">April 2015</div>
-                <div class="col-xs-9">
-                  NASA Space Apps Chronobook Local Award in Zaragoza (Spain).
-                </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-lg-12">
-                    <h1 class="page-header">
-                      <small>Projects</small>
-
-
-                    </h1>
-                  </div>
-                </div>
-
-                See <a href="projects.html">Projects</a> page.
-
-                <div class="row">
-                  <div class="col-lg-12">
-                    <h1 class="page-header">
-                      <small>Language Skills</small>
-
-
-                    </h1>
-                  </div>
-                </div>
-
-
-
-                <table class="table table-striped">
-
-                  <tr>
-                    <th>Language</th><th>Speaking</th><th>Understanding</th><th>Writing</th><th>Reading</th>
-                  </tr>
-                  <tr>
-                    <td><strong>Spanish (native)</strong></td><td>Excellent</td><td>Excellent</td><td>Excellent</td><td>Excellent</td>
-
-                  </tr>
-                  <tr>
-                    <td><strong>English (C2)</strong></td><td>Good</td><td>Very good</td><td>Very good</td><td>Very good</td>
-
-                  </tr>
-                  <tr>
-                      <td><strong>Catalan</strong></td><td>Basic</td><td>Good</td><td>Basic</td><td>Good</td>
-                    </tr>
-                </table>
-
-
-                <div class="row">
-                  <div class="col-lg-12">
-                    <h1 class="page-header">
-                      <small>Certificates</small>
-
-
-                    </h1>
-                  </div>
-                </div>
-
-                <div class="row" style="margin-top:20px;">
-                  <div class="col-xs-3">August 2017</div>
-                  <div class="col-xs-9">
-                    Certificate in Advanced English: Grade A, ability at C2 level. University of Cambridge.
-                  </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <h1 class="page-header">
-                        <small>Interests</small>
-
-
-                      </h1>
-                    </div>
-                  </div>
-
-
-                  <p>
-                    Interested in Business Intelligence, Web Services and the integration of Software Development and Engineering with the
-                    business world. Also reading about Linked Data, Semantic Web and extraction of data from large sources of knowledge.
-                    Training on Front-end and Back-end development, mobile application development, Software Engineering and IT Security.
-                    I would like
-                  to make contact with people from different cultures as well.
-                  Love free software.
-
-                  </p>
-
-          <!-- /.row -->
-
-          <hr>
-
-          <!-- Pagination -->
-          <!--<div class="row text-center">
-          <div class="col-lg-12">
-          <ul class="pagination">
-          <li>
-          <a href="#">&laquo;</a>
-        </li>
-        <li class="active">
-        <a href="#">1</a>
-      </li>
-      <li>
-      <a href="#">2</a>
-    </li>
-    <li>
-    <a href="#">3</a>
-  </li>
-  <li>
-  <a href="#">4</a>
-</li>
-<li>
-<a href="#">5</a>
-</li>
-<li>
-<a href="#">&raquo;</a>
-</li>
-</ul>
-</div>
-</div>-->
-<!-- /.row -->
-
-<!--  <hr> -->
-
-<!-- Footer -->
-<footer>
-  <div class="row">
-    <div class="col-lg-12">
-      <p>Copyright &copy; Ismael Rodríguez 2017</p>
-    </div>
-  </div>
-  <!-- /.row -->
-</footer>
-
-</div>
-<!-- /.container -->
-
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-80287092-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>Ismael Rodríguez</title><link href="/static/css/main.ad8f2a08.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.3c0251bc.js"></script></body></html>
